- Der Besitzer einer Newsmeldung kann immer auf diese Zugreifen, auch wenn
  diese geschützt ist und er sich kein expliziter Zugriff erteilt hat.

Modul: Adressverzeichnis
- Die Suche funktioniert in jedem Bereich.

Modul: Bildergalerie
- Die ToolTips der Bilder sind korrekt.
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: Blog
- Umlaute bei den Überschriften des RSS-Feeds werden korrekt angezeigt.
- Anführungszeichen werden bei Kommentaren akzeptiert.
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: E-Card
- Die Bilder werden gemäss den Einstellungen verkleinert.

Modul: Digital Asset Management
- Die Benutzerdefinierte Sortierung funktioniert.
- Kategorien können keinen Unterkategorien zugeordnet werden.
- Die Einstellungen können nur mit Verwaltungsrechten modifiziert werden.
- XHTML validierte Ausgabe.

Modul: Dokumenten System
- Kompatibel mit der Alias Verwaltung.

Modul: Forum
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: Kleinanzeigemarkt
- Die Suche nach Anzeigen im Backend funktioniert.

Modul: Newsletter
- Die Anmeldung und Bearbeitung des Profils funktioniert korrekt.

Modul: Linkverzeichnis
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: Shop
- E-Mail Vorlagen vom Typ Systemvorlage sind nicht Löschbar.
- Bei der Bestellung eines Produktes vom Typ "Mitgliedschaft" wird das
  Benutzerkonto mit der entsprechend definierten Gültigkeitsdauer erstellt.
- Beim Versand der Bestellbestätigung per E-Mail wird, falls die benötigte
  E-Mail Vorlage in der ausgewählten Sprache nicht vorhanden ist, die, in der
  Standardsprache erfassten E-Mail Vorlage verwendet. Falls auch letztere nicht
  vorhanden ist, wird die nächste vorhandene Sprache verwendet.

Modul: User to User Nachrichten
- Die E-Mail Benachrichtigungen über neue Nachrichten werden versendet.
- Der Platzhalter [senderName] in der E-Mail-Benachrichtigung wird ersetzt

Modul: Wissensdatenbank
- Verbesserte Live-Suche.

Statistik